@@ -17,9 +17,7 @@ import org.elasticsearch.xpack.esql.core.InvalidArgumentException;
 import org.elasticsearch.xpack.esql.core.expression.Expression;
 import org.elasticsearch.xpack.esql.core.expression.FoldContext;
 import org.elasticsearch.xpack.esql.core.expression.Literal;
-import org.elasticsearch.xpack.esql.core.expression.MetadataAttribute;
 import org.elasticsearch.xpack.esql.core.expression.Nullability;
-import org.elasticsearch.xpack.esql.core.expression.UnresolvedAttribute;
 import org.elasticsearch.xpack.esql.core.tree.NodeInfo;
 import org.elasticsearch.xpack.esql.core.tree.Source;
 import org.elasticsearch.xpack.esql.core.type.DataType;
@@ -28,6 +26,7 @@ import org.elasticsearch.xpack.esql.expression.function.Example;
 import org.elasticsearch.xpack.esql.expression.function.FunctionInfo;
 import org.elasticsearch.xpack.esql.expression.function.OptionalArgument;
 import org.elasticsearch.xpack.esql.expression.function.Param;
+import org.elasticsearch.xpack.esql.expression.function.TimestampAware;
 import org.elasticsearch.xpack.esql.expression.function.scalar.EsqlConfigurationFunction;
 import org.elasticsearch.xpack.esql.expression.predicate.logical.And;
 import org.elasticsearch.xpack.esql.expression.predicate.operator.comparison.GreaterThan;
@@ -68,7 +67,12 @@ import static org.elasticsearch.xpack.esql.type.EsqlDataTypeConverter.dateTimeTo
  *     <li>TRANGE(1715504400000, 1715517000000) - [explicit start in millis; explicit end in millis]</li>
  * </ul>
  */
-public class TRange extends EsqlConfigurationFunction implements OptionalArgument, SurrogateExpression, PostAnalysisPlanVerificationAware {
+public class TRange extends EsqlConfigurationFunction
+    implements
+        OptionalArgument,
+        SurrogateExpression,
+        PostAnalysisPlanVerificationAware,
+        TimestampAware {
     public static final String NAME = "TRange";
 
     public static final String START_TIME_OR_OFFSET_PARAMETER = "start_time_or_offset";
@@ -100,16 +104,13 @@ public class TRange extends EsqlConfigurationFunction implements OptionalArgumen
         ) Expression first,
         @Param(name = END_TIME_PARAMETER, type = { "keyword", "long", "date", "date_nanos" }, description = """
             Explicit end time that can be a date string, date, date_nanos or epoch milliseconds.""", optional = true) Expression second,
+        Expression timestamp,
         Configuration configuration
     ) {
-        this(source, new UnresolvedAttribute(source, MetadataAttribute.TIMESTAMP_FIELD), first, second, configuration);
-    }
-
-    public TRange(Source source, Expression timestamp, Expression first, Expression second, Configuration configuration) {
-        super(source, second != null ? List.of(timestamp, first, second) : List.of(timestamp, first), configuration);
-        this.timestamp = timestamp;
+        super(source, second != null ? List.of(first, second, timestamp) : List.of(first, timestamp), configuration);
         this.first = first;
         this.second = second;
+        this.timestamp = timestamp;
     }
 
     @Override
@@ -125,6 +126,11 @@ public class TRange extends EsqlConfigurationFunction implements OptionalArgumen
     @Override
     public EvalOperator.ExpressionEvaluator.Factory toEvaluator(ToEvaluator toEvaluator) {
         throw new UnsupportedOperationException("should be rewritten");
+    }
+
+    @Override
+    public Expression timestamp() {
+        return timestamp;
     }
 
     @Override
@@ -188,9 +194,9 @@ public class TRange extends EsqlConfigurationFunction implements OptionalArgumen
     public Expression replaceChildren(List<Expression> newChildren) {
         return new TRange(
             source(),
-            newChildren.get(0),
-            newChildren.get(1),
-            newChildren.size() == 3 ? newChildren.get(2) : null,
+            newChildren.getFirst(),
+            newChildren.size() == 3 ? newChildren.get(1) : null,
+            newChildren.getLast(),
             configuration()
         );
     }
@@ -207,7 +213,7 @@ public class TRange extends EsqlConfigurationFunction implements OptionalArgumen
 
     @Override
     protected NodeInfo<? extends Expression> info() {
-        return NodeInfo.create(this, TRange::new, timestamp, first, second, configuration());
+        return NodeInfo.create(this, TRange::new, first, second, timestamp, configuration());
     }
 
     @Override
